fix(codegen): fix warnings in codegen.